Bug 413217 - DetailedListView does not refresh when an entry is added to the collection from FetchDialog
Summary: DetailedListView does not refresh when an entry is added to the collection fr...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-20 00:29 UTC by Robby Stephenson
Modified: 2019-10-20 17:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2019-10-20 00:29:55 UTC
SUMMARY
The DetailedListView does not refresh (entry is in the list, but never brought into view) when an entry is added to the collection from FetchDialog. As a result EntryEditDialog is never populated with the entry data (setContents is not called).

I tracked it down to DetailsListView bug fix 391614 in commit f6d89101ff95cebeb6772f7ecebd084f5b7c6b2f

The complete removal of m_selectionChanging and its associated code causes this regression. Reverting this removal fixed the problem for me.
Comment 1 Robby Stephenson 2019-10-20 17:53:19 UTC
Git commit 24f55565c091c25130f799bd0a4955ad2bd520d8 by Robby Stephenson.
Committed on 20/10/2019 at 17:50.
Pushed by rstephenson into branch '3.2'.

Automatically select newly added entries

Reverts some regression in behavior in Bug 391614. This selects newly
added entries for all widgets that use the selection view, but (for the
moment) only scrolls to the selection in DetailedListView.
Related: bug 391614
FIXED-IN: 3.2.2

M  +8    -0    ChangeLog
M  +1    -0    src/controller.cpp
M  +3    -0    src/detailedlistview.cpp

https://commits.kde.org/tellico/24f55565c091c25130f799bd0a4955ad2bd520d8