Automatically select newly added entries

Reverts some regression in behavior in Bug 391614. This selects newly
added entries for all widgets that use the selection view, but (for the
moment) only scrolls to the selection in DetailedListView.

BUG: 413217
FIXED-IN: 3.2.2
CCBUG: 391614